Added css and js files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!-- TODO -->
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>DOM Exercise 02</title>
+
+  <link rel="stylesheet" href="main.css">
+
+</head>
+
+<body>
+  <script src="main.js"></script>
+</body>
+</html>
